# finalproject_menshikova_daria_dpo_nod

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
valutatrade_hub/: decorators.py  logging_config.py
valutatrade_hub/cli/: interface.py
valutatrade_hub/core/: constants.py  currencies.py  exceptions.py  models.py  session.py  usecases.py
valutatrade_hub/infra/: constants.py  setting.py
valutatrade_hub/parser_service/: api_clients.py  config.py  constants.py  main.py  scheduler.py  storage.py  updater.py
