[project]
name = "finalproject-menshikova-daria-dpo-nod"
version = "0.1.0"
description = ""
authors = [
    {name = "Daria Menshikova",email = "dari.menshikova@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["prompt (>=0.4.1,<0.5.0)"]

[tool.poetry]
packages = [
    {include = "valutatrade_hub"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
ruff = "^0.13.2"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []